<resources>
    <string name="app_name">RokomariTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="deadline">Deadline:</string>
    <string name="status">Status:</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="edit_task">Edit Task</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="save_url">Save URL</string>
    <string name="save_phone">Save Phone</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="save_e_mail">Save E-mail</string>
    <string name="enter_url">Enter URL</string>
    <string-array name="status_type">
        <item>Open</item>
        <item>In-Progress</item>
        <item>Test</item>
        <item>Done</item>
    </string-array>
</resources>