<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".TaskDetailsActivity">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="Task Details"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="103dp" />

        <ImageButton
            android:id="@+id/taskDetailsDeleteimageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/layout_background"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/ic_baseline_delete" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="Created Date:"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/taskDetailsCreatedDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/taskDetailsStatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="Open"
            android:textColor="@color/floating_button_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/status"
            android:textColor="@color/task_name_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/taskDetailsStatusTv"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/taskDetailsTaskNameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="NoteMe Project"
            android:textColor="@color/task_name_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailsTaskNameTv" />

        <TextView
            android:id="@+id/taskDetailsDescriptionTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="asdfadfadfadfadf"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/deadline"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailsDescriptionTv" />

        <TextView
            android:id="@+id/taskDetailsDeadlineTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="21.20.2120"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailsDescriptionTv" />

        <ImageButton
            android:id="@+id/taskDetailsUrlImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/layout_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/taskDetailsPhoneImageButton"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailsDeadlineTv"
            app:srcCompat="@drawable/ic_url" />

        <ImageButton
            android:id="@+id/taskDetailsPhoneImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/layout_background"
            app:layout_constraintEnd_toStartOf="@+id/taskDetailsUrlImageButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/taskDetailsEmailImageButton"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailsDeadlineTv"
            app:srcCompat="@drawable/ic_phone" />

        <ImageButton
            android:id="@+id/taskDetailsEmailImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/layout_background"
            app:layout_constraintEnd_toStartOf="@+id/taskDetailsPhoneImageButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailsDeadlineTv"
            app:srcCompat="@drawable/ic_email" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/taskDetailsEmailImageButton"
            app:layout_constraintStart_toStartOf="@+id/taskDetailsEmailImageButton"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailsEmailImageButton" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/taskDetailsPhoneImageButton"
            app:layout_constraintStart_toStartOf="@+id/taskDetailsPhoneImageButton"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailsPhoneImageButton" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="URL"
            app:layout_constraintEnd_toEndOf="@+id/taskDetailsUrlImageButton"
            app:layout_constraintStart_toStartOf="@+id/taskDetailsUrlImageButton"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailsUrlImageButton" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/taskDetailsfloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="148dp"
            android:backgroundTint="@color/floating_button_color"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintVertical_bias="0.573"
            app:srcCompat="@drawable/icons_edit"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
